# yaug

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  sqlx-data.json
configuration/: config.toml
migrations/: 20221226172326_create_accounts_table.sql  20221230085347_create_account_activation_table.sql  20221230092247_create_email_job_queue.sql
public/templates/: base.html  home.html
public/templates/account/: home.html
public/templates/login/: form.html
public/templates/register/: form.html
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs  session_state.rs
src/domain/: mod.rs
src/domain/account_credentials/: credentials.rs  email.rs  mod.rs  password.rs
src/domain/login_credentials/: credentials.rs  email.rs  mod.rs  password.rs
src/helpers/: mod.rs  subscription_hash.rs
src/routes/: home.rs  mod.rs
src/routes/account/: home.rs  mod.rs
src/routes/login/: get.rs  mod.rs  post.rs
src/routes/register/: get.rs  mod.rs  post.rs
src/store/: get.rs  mod.rs  store.rs
tests/yaug/: login.rs  main.rs  register.rs
tests/yaug/helpers/: mod.rs  redirect.rs  test_app.rs  test_app_impl.rs
