[package]
name = "yaug"
description = "Yet Another Unnamed Game"
version = "0.0.1"
edition = "2021"
authors = ["WildCommunist <alex@ceres.ventures>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "yaug"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.18.8"
actix-files = "0.6.2"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
config = "0.13"
lazy_static = "1"
regex = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.149", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
tera = { version = "1", default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.5"